Add day 3 AM slides

--- a/slides/03-git-and-hosting/index.html
+++ b/slides/03-git-and-hosting/index.html
@@ -35,8 +35,7 @@
 		<div class="reveal">
 			<div class="slides">
         <section data-markdown="./md/01-intro.md" data-separator="^<-->" data-separator-vertical="^<..>"></section>
-        <section data-markdown="./md/02-history.md" data-separator="^<-->" data-separator-vertical="^<..>"></section>
-        <section data-markdown="./md/03-language.md" data-separator="^<-->" data-separator-vertical="^<..>"></section>
+        <section data-markdown="./md/02-source-control.md" data-separator="^<-->" data-separator-vertical="^<..>"></section>
 			</div>
 
       <aside class="cf-watermark">
