--- a/slides/01-ruby-intro/index.html
+++ b/slides/01-ruby-intro/index.html
@@ -41,7 +41,7 @@
 			</div>
 
       <aside class="cf-watermark">
-        <img src="/images/clear-function-logo-white.svg" alt="Clear Function" />
+        <img src="./images/clear-function-logo-white.svg" alt="Clear Function" />
       </aside>
 		</div>
 
